crates/test-files/fixtures/compile_errors/bad_ingot/src/foo.fe
use bing::Bong::*
use bing::Tong

struct Foo:
    my_num: u256

struct Bar:
    pass